--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@koa/cors": "^2.2.2",
+    "ajv": "^6.5.5",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "config": "^2.0.1",
@@ -35,7 +36,7 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
-    "eslint": "^5.7.0",
+    "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
